# sandbox-engine

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf  style_notes.md
assets/shaders/: transform.vs  vertex.glsl
assets/shaders/examples/01_shaders_and_vao/: vertex.glsl
assets/shaders/examples/02_textures/: fragment.glsl  vertex.glsl
assets/shaders/examples/03_transforms/: vertex.glsl
assets/shaders/examples/04_model_view_projection/: fragment.glsl  vertex.glsl
assets/shaders/examples/05_fps_camera/: vertex.glsl
assets/shaders/misc/: default.vs  fragment.glsl  mvp.vs  texture_multi.fs
include/sandbox/: sandbox.hpp
include/sandbox/core/: Input.hpp  Window.hpp  constants.hpp  keysymdef.hpp  opengl.hpp  types.hpp
include/sandbox/graphics/: Camera.hpp  Shader.hpp  Texture.hpp  VAO.hpp
include/sandbox/math/: Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  math.hpp  projection.hpp  transform.hpp
include/sandbox/utils/: Loader.hpp  Logger.hpp  Timer.hpp  filesystem.hpp  string.hpp
source/examples/: 00_create_window.cpp  01_shaders_and_vao.cpp  02_textures.cpp  03_transforms.cpp  04_model_view_projection.cpp  05_fps_camera.cpp
source/sandbox/core/: Input.cpp  Window.cpp
source/sandbox/graphics/: Camera.cpp  Shader.cpp  Texture.cpp  VAO.cpp
source/sandbox/math/: Matrix.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Vector.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  projection.cpp  transform.cpp
source/sandbox/utils/: Loader.cpp  Logger.cpp  Timer.cpp  filesystem.cpp  string.cpp
